set up database

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionStrings": { "DefaultConnection": "server=(localdb)\\MSSQLLocalDB;database=PizzaApp;" },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
